# gitea-github-sync

./: .flake8  CHANGELOG.md  Dockerfile  LICENSE  README.md  mypy.ini  pyproject.toml  tox.ini
.github/workflows/: package.yml  publish.yml
docker/: config.yml
docs/docker/: README.md
gitea_github_sync/: cli.py  config.py  gitea.py  github.py  migration.py  repository.py
tests/: test_cli.py  test_config.py  test_gitea.py  test_github.py  test_migration.py
