[tool.poetry]
name = "gitea-github-auto-mirror"
version = "0.1.0"
description = ""
authors = ["= <Muscaw@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "gitea_github_auto_mirror"}]

[tool.poetry.dependencies]
python = "^3.10"
pygithub = "^1.57"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.12.0"
flake8 = "^6.0.0"
isort = "^5.11.4"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
