[tool.isort]
profile = "black"

[tool.black]
line-length = 100

[tool.poetry]
name = "gitea-github-sync"
version = "0.1.1"
homepage = "https://github.com/Muscaw/gitea-github-sync"
description = "Syncs your gitea instance with your Github account"
authors = ["Kevin Grandjean <Muscaw@users.noreply.github.com>"]
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Typing :: Typed",
]
packages = [{include = "gitea_github_sync"}]

[tool.poetry.scripts]
gitea-github-sync = "gitea_github_sync.cli:cli"

[tool.poetry.dependencies]
python = "^3.8.1"
pygithub = "^1.57"
click = "^8.1.3"
piny = "^0.6.0"
pydantic = "^1.10.4"
rich = "^13.0.0"
requests = "^2.28.1"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.12.0"
flake8 = "^6.0.0"
isort = "^5.11.4"
mypy = "^0.991"
tox = "^4.1.1"
pytest-cov = "^4.0.0"
responses = "^0.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
